# DICE-Bench

./: .gitignore  README.md  environment.yml  index.html  inference.py  main.py  pyproject.toml  requirements.txt  showing_data.py  temp_tool_desc.json  test.json  test.py  tool_document.json  tool_graph.json  validation.py
archived/notebook/: gen_dataset.ipynb
data/sample/: round_1.json  round_2.json  round_3.json  round_4.json
generate_dialogue/: dialogue_category.json  gen_persona.ipynb
generate_dialogue/.ipynb_checkpoints/: gen_dataset-checkpoint.ipynb
generate_dialogue/archive/: evals.py  test.ipynb
generate_dialogue/archive/.ipynb_checkpoints/: evals_util-checkpoint.py
generate_dialogue/handmade_dataset/: SM.json  SS.json
inference/: examples.jsonl  inference.ipynb
inference/.ipynb_checkpoints/: examples-checkpoint.jsonl  inference-checkpoint.ipynb
inference/prompt/: main_prompt.txt
outputs/all_rounds/: round_1.json  round_2.json
outputs/inf_vllm/llama_3_2_3b_instruct/: llama_3_2_3b_instruct_round_1.json  llama_3_2_3b_instruct_round_2.json  llama_3_2_3b_instruct_round_3.json  llama_3_2_3b_instruct_round_4.json
outputs/selected_round/: round_4.json
scripts/: gen_all_round.sh  gen_selected_round.sh  inf_vllm.sh
src/: colorlog.py  config.py  get_dice_score.py  main.py
src/agent/: base.py
src/function/: base.py  example.py  utils.py
src/graph/: sample_subgraph.py  tool_docs.json  tool_graph.json  utils.py  visualize_graph.py
src/inference/: inference_vllm.py  utils.py
src/prompt/: base.py  domain_prompt.py  few_shot_example.py  inference.py  inference_prompt.py  validation_prompt.py
src/utils/: few_shot_params.py  utils.py
src/validation/: EM.py  base.py  geval.py  graph.py  ic.py  main.py  rule_based_val.ipynb  system.py  utils.py
src/validation/prompt/: Coherence.txt  Dialogue_Consistency.txt  Eristic.txt  Fluency.txt  Humanness.txt  Inquiry_and_Information_Seeking.txt  Persona_Consistency.txt  Persuassion_Deliberation_and_Negotiation.txt  Relevance.txt
src_configs/: gen_base.yaml  inf_base.yaml  val_base.yaml
static/css/: index.css
